# data-agregator

./: .gitignore  AGENTS.md  README.md  build.sh  pyproject.toml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
e2e_tests/: DEBUGGING_IMPROVEMENTS.md  IDEMPOTENCY_TEST_FIX.md  KEY_SANITIZATION_TEST_FIX.md  README.md  clear_table.py  junit_results.xml  main.py  results_01_batching.xml  results_02_large_file.xml  results_03_zero_byte.xml  results_04_concurrency.xml  results_06_disk_limit.xml  results_09_memory_pressure.xml  test_bundle_diagnostics.py  test_idempotency_fix.py  tester.py
e2e_tests/components/: config.py  data_generator.py  pre_flight.py  region_utils.py  runner.py
e2e_tests/configs/: config_00_singe_file.json  config_01_batching.json  config_02_large_file.json  config_03_zero_byte.json  config_04_concurrency.json  config_05_compressible.json  config_06_disk_limit.json  config_07_idempotency.json  config_08_backlog.json  config_09_memory_pressure.json  config_10_file_not_found.json  config_11_key_sanitization.json  config_12_test_large_files.json  results_09_corrupt_file.json  results_10_file_not_found.json  results_11_key_sanitization.json
infra/: .terraform.lock.hcl  02-do.sh  03-do.sh  README.md  destroy.sh  one_time_setup.sh  outputs.tf  providers.tf  setup.sh  terraform.tfvars
infra/FUTURE-THINKING/00-security/: README.md  main.tf  variables.tf
infra/components/00-security/: main.tf  outputs.tf  providers.tf  tf.sh  variables.tf
infra/components/01-network/: README.md  main.tf  outputs.tf  providers.tf  tf.sh  variables.tf
infra/components/02-stateful-resources/: README.md  data.tf  main.tf  outputs.tf  providers.tf  tf.sh  variables.tf
infra/components/03-application/: README.md  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/components/04-observability/: README.md  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/dev/: 00-security.backend.tfvars  01-network.backend.tfvars  02-pipeline.backend.tfvars  02-stateful-resources.backend.tfvars  03-application-backend.tfvars  03-application.backend.tfvars  04-observability.backend.tfvars  application.tfvars  backend.tfvars  common.tfvars  network.tfvars  observability.tfvars  pipeline.tfvars  security.tfvars  stateful-resources.tfvars
infra/modules/data_pipeline/: iam.tf  lambda.tf  main.tf  outputs.tf  variables.tf
infra/modules/mock_nifi_endpoint/: README.md  main.tf  outputs.tf  variables.tf
infra/scripts/: bootstrap.sh  clean-up.sh  create-artifact-bucket.sh  deploy-lambda.sh  env.sh  generate-test-data.sh  one_time_setup.sh  sync-wrappers.sh
scripts/: build_lambda.sh
src/: README.md
src/data_aggregator/: README.md  __init__.py  aapp.py  app.py  clients.py  config.py  core-old.py  core.py  exceptions.py  old_core.py  schemas.py  security.py
test_scripts/: config.json  config_00_singe_file.json  config_01_batching.json  config_02_large_file.json  config_03_zero_byte.json  config_04_concurrency.json  tester.py
tests/: README.md
tests/e2e/: run_e2e_test.py
tests/unit/: conftest.py  test_app.py  test_clients.py  test_config.py  test_core.py  test_exceptions.py  test_schemas.py  test_security.py
