[project]
name = "data-aggregator"
version = "0.2.0"
description = "Sync data between S3 and MinIO with aggregation and compresseion"
readme = "README.md"
authors = [
    { name = "jt765487", email = "jt765487@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.17.0",
    "aws-xray-sdk>=2.14.0",
    "boto3>=1.39.1",
]

[dependency-groups]
dev = [
  "boto3-stubs[dynamodb,s3,sqs]>=1.39.1",
  "mocker>=1.1.1",
  "moto>=5.1.6",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "ruff>=0.12.1",
  "boto3>=1.39.1",
  "rich>=14.0.0",
  "pytest-env>=1.1.5",
]

[project.scripts]
data-aggregator = "data_aggregator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "blackbox: marks tests as black-box end-to-end tests",
    "integration: marks tests as integration tests"
]
env = [
    "AWS_REGION=us-east-1",
    "DISTRIBUTION_BUCKET_NAME=mock-distribution-bucket",
    "IDEMPOTENCY_TABLE_NAME=mock-idempotency-table",
    "IDEMPOTENCY_TTL_SECONDS=3600",
    "SERVICE_NAME=DataAggregator",
    "LOG_LEVEL=DEBUG",
    "ENVIRONMENT=test"
]


[tool.mypy]
plugins = ["mypy_boto3_plugin.main"]
